--- a/APM-Final/src/app/app.component.html
+++ b/APM-Final/src/app/app.component.html
@@ -1,46 +1,51 @@
 <span class="glyphicon glyphicon-refresh glyphicon-spin spinner" *ngIf="loading"></span>
 <div>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <a class="navbar-brand">{{pageTitle}}</a>
-            <ul class="nav navbar-nav">
-                <li routerLinkActive="active">
-                    <a [routerLink]="['/welcome']">Home</a>
-                </li>
-                <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                    <a [routerLink]="['/products']">Product List</a>
-                </li>
-                <li routerLinkActive="active">
-                    <a [routerLink]="['/products', 0, 'edit']">Add Product</a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li *ngIf="authService.isLoggedIn()">
-                    <a [routerLink]="['/login']">Welcome {{ authService.currentUser.userName }}</a>
-                </li>
-                <li *ngIf="!messageService.isDisplayed">
-                    <a (click)="displayMessages()">Show Messages</a>
-                </li>
-                <li *ngIf="messageService.isDisplayed">
-                    <a (click)="hideMessages()">Hide Messages</a>
-                </li>
-                <li *ngIf="!authService.isLoggedIn()">
-                    <a [routerLink]="['/login']">Log In</a>
-                </li>
-                <li *ngIf="authService.isLoggedIn()">
-                    <a (click)="logOut()">Log Out</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-10">
-                <router-outlet></router-outlet>
-            </div>
-            <div class="col-md-2">
-                <router-outlet name="popup"></router-outlet>
-            </div>
-        </div>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <a class="navbar-brand">{{pageTitle}}</a>
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active">
+          <a [routerLink]="['/welcome']">Home</a>
+        </li>
+        <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+          <a [routerLink]="['/products']">Product List</a>
+        </li>
+        <li routerLinkActive="active">
+          <a [routerLink]="['/products', 0, 'edit']">Add Product</a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li *ngIf="authService.isLoggedIn()">
+          <a [routerLink]="['/login']">Welcome {{ authService.currentUser.userName }}</a>
+        </li>
+        <li *ngIf="!messageService.isDisplayed">
+          <a (click)="displayMessages()">Show Messages</a>
+        </li>
+        <li *ngIf="messageService.isDisplayed">
+          <a (click)="hideMessages()">Hide Messages</a>
+        </li>
+        <li *ngIf="!authService.isLoggedIn()">
+          <a [routerLink]="['/login']">Log In</a>
+        </li>
+        <li *ngIf="authService.isLoggedIn()">
+          <a (click)="logOut()">Log Out</a>
+        </li>
+      </ul>
     </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10">
+        <router-outlet></router-outlet>
+      </div>
+      <div class="col-md-2">
+        <router-outlet name="popup"></router-outlet>
+      </div>
+    </div>
+  </div>
+  <div style="border: thin solid red; width: 100%">
+    <ul>
+      <li *ngFor="let shortcut of shortcuts"><a [href]="shortcut.url">{{shortcut.label}} {{shortcut.params}}</a></li>
+    </ul>
+  </div>
 </div>
